# cwh-basic

./: .travis.yml  Cargo.toml  Dockerfile  Rocket.toml  rustfmt.toml
.github/workflows/: azure_deploy.yml  general.yml  rust_ci.yml
src/: blog.rs  login.rs  main.rs  test.rs
src/login/: mod.rs
static/: index.html  resume.html  style.css
static/tetris/: index.html  program.wasm
templates/: blog.html.hbs  login.html.hbs
templates/error/: 404.html.hbs
