[package]
name = "cwh-basic"
version = "0.1.1"
authors = ["Will Hakes <info@cwilliamhakes.com>"]

[dependencies]
rocket = "0.4.2"
chrono = "0.4.10"
handlebars-markdown-helper = "0.7.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "postgres_pool", "serve"]

[dependencies.postgres]
version = "0.15.2"
features = ["with-chrono"]
