[package]
name = "cwh-basic"
version = "0.1.1"
authors = ["Will Hakes <info@cwilliamhakes.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
chrono = "0.4.19"
handlebars-markdown-helper = "0.7.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates", "postgres_pool", "serve"]

[dependencies.postgres]
version = "0.15.1"
features = ["with-chrono"]
