[package]
name = "cwh-basic"
version = "0.1.2"
authors = ["Will Hakes <info@cwilliamhakes.com>"]
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
chrono = "0.4.22"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["postgres_pool"]

[dependencies.postgres]
version = "0.19.4"
features = ["with-chrono-0_4"]
